--- a/Web Pages/style.css
+++ b/Web Pages/style.css
@@ -27,3 +27,7 @@ input[type=checkbox].css-checkbox {
 				-ms-user-select: none;
 				user-select: none;
 			}
+
+#checklist{
+    text-align: left;
+}
