--- a/Web Pages/home-style.css
+++ b/Web Pages/home-style.css
@@ -23,9 +23,10 @@
   }
   .carousel-inner img {
       -webkit-filter: grayscale(90%);
-      filter: grayscale(90%); /* make all photos black and white */ 
+      filter: grayscale(80%); /* make all photos black and white */ 
       width: 100%; /* Set width to 100% */
       margin: auto;
+      opacity: 0.7;
   }
   .carousel-caption h3 {
       color: #fff !important;
@@ -35,12 +36,70 @@
       display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
     }
   }
-  .bg-1 {
-      background: #2d2d30;
-      color: #bdbdbd;
+  #text {
+    z-index: 100;
+    position: absolute;
+    text-align: center;
+    left: 625px;
+    top: 50%;
   }
-  .bg-1 h3 {color: #fff;}
-  .bg-1 p {font-style: italic;}
+
+  /* Shared */
+  .loginBtn {
+    box-sizing: border-box;
+    position: relative;
+    /* width: 13em;  - apply for fixed size */
+    margin: 0.2em;
+    padding: 0 15px 0 46px;
+    border: none;
+    text-align: left;
+    line-height: 34px;
+    white-space: nowrap;
+    border-radius: 0.2em;
+    font-size: 16px;
+    color: #FFF;
+  }
+  .loginBtn:before {
+    content: "";
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 34px;
+    height: 100%;
+  }
+  .loginBtn:focus {
+    outline: none;
+  }
+  .loginBtn:active {
+    box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
+  }
+
+
+  /* Google */
+  .loginBtn--google {
+    /*font-family: "Roboto", Roboto, arial, sans-serif;*/
+    background: #DD4B39;
+  }
+  .loginBtn--google:before {
+    border-right: #BB3F30 1px solid;
+    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
+  }
+  .loginBtn--google:hover,
+  .loginBtn--google:focus {
+    background: #E74B37;
+  }
+
+  .bg-1 {
+    background: #2d2d30;
+    color: #bdbdbd;
+  }
+  .bg-1 h3 {
+    color: #fff;
+  }
+  .bg-1 p {
+    font-style: italic;
+  }
   .list-group-item:first-child {
       border-top-right-radius: 0;
       border-top-left-radius: 0;
@@ -82,12 +141,6 @@
   .nav-tabs li a {
       color: #777;
   }
-  #googleMap {
-      width: 100%;
-      height: 400px;
-      -webkit-filter: grayscale(100%);
-      filter: grayscale(100%);
-  }  
   .navbar {
       font-family: Montserrat, sans-serif;
       margin-bottom: 0;
