--- a/Web Pages/style.css
+++ b/Web Pages/style.css
@@ -44,7 +44,6 @@ html, body {
 a {
 	display: block;
 	margin: auto;
-	margin-top: 10px;
 	text-decoration: none;
 	color: inherit;
 }
@@ -143,9 +142,6 @@ a {
     
     
 }
-    html, body {
-        background: #1f1d21;
-    }
     
     .boton {
         width: 200px;
@@ -163,7 +159,7 @@ a {
         text-align: center;
         line-height: 50px;
         font-family: 'Montserrat', sans-serif;
-        font-size: 12px;
+        font-size: 16px;
         text-transform: uppercase;
     }
     
@@ -180,7 +176,7 @@ a {
         content: "";
         width: 100%;
         height: 100%;
-        background: #fed5a9;
+        background: #566D7E;
         bottom: 100%;
         position: absolute;
         transform-origin: center bottom 0px; 
@@ -201,7 +197,7 @@ a {
         width: 100%;
         top: 100%;
         height: 100%;
-        background: #9f7f5e;
+        background: #2B3856;
         transform-origin: center top 0px;
         transform: matrix3d(1, 0, 0, 0, 
                             0, 1, 0, 0, 
@@ -215,7 +211,7 @@ a {
     }
     
     .boton:hover .twist:before {
-        background: #fff;
+        background: #BCC6CC;
         transform: matrix3d(1, 0, 0, 0, 
                             0, 1, 0, 0, 
                             0, 0, 1, 0.003, 
@@ -388,3 +384,10 @@ a {
     .square span:nth-of-type(3):after {
         transition-delay: 0.3s;
     }
+
+    :root {
+    /* if u want to change the color of
+     * the ripple change this value
+    */
+    --color-ripple: rgba(255,255,255,0.8);
+}
