--- a/Web Pages/style.css
+++ b/Web Pages/style.css
@@ -171,12 +171,12 @@ a {
         float: left;
         margin-left: -4px;
     }
-    
+    /*color change between default -> hover*/
     .twist:before {
         content: "";
         width: 100%;
         height: 100%;
-        background: #566D7E;
+        background: #00e9fc;
         bottom: 100%;
         position: absolute;
         transform-origin: center bottom 0px; 
@@ -191,13 +191,14 @@ a {
         transition: all 500ms cubic-bezier(0.970, 0.000, 0.395, 0.995); /* custom */
     }
     
+/*color on default*/
     .twist:after {
         content: "";
         position: absolute;
         width: 100%;
         top: 100%;
         height: 100%;
-        background: #2B3856;
+        background: #274a80;
         transform-origin: center top 0px;
         transform: matrix3d(1, 0, 0, 0, 
                             0, 1, 0, 0, 
@@ -210,16 +211,17 @@ a {
         transition: all 500ms cubic-bezier(0.970, 0.000, 0.395, 0.995); /* custom */
     }
     
+/*color on hover*/
     .boton:hover .twist:before {
-        background: #BCC6CC;
+        background: #b3f9ff;
         transform: matrix3d(1, 0, 0, 0, 
                             0, 1, 0, 0, 
                             0, 0, 1, 0.003, 
                             0, 50, 0, 1);
     }
-    
+    /*color under when default -> hover*/
     .boton:hover .twist:after {
-        background: #dedae1;
+        background: #081753;
         transform: matrix3d(1, 0, 0, 0, 
                             0, 0, -1, 0.003, 
                             0, 1, 0, 0, 
